--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.5.17",
     "vue-i18n": "^8.3.2",
     "vue-router": "^3.0.1",
+    "vue-waterfall2": "^1.9.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
