--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 # 只在开发环境存在的环境变量
 
 # 接口地址
-VUE_APP_API = 'http://yapi.kydev.org/mock/377'
+# VUE_APP_API = 'http://yapi.kydev.org/mock/377'
+VUE_APP_API = 'http://47.91.164.235:9505'
